fix formatting with textwrap

--- a/app/assets/stylesheets/api/groups/group_index.scss
+++ b/app/assets/stylesheets/api/groups/group_index.scss
@@ -7,11 +7,18 @@
   text-decoration: none;
   font-family: 'Ubuntu', sans-serif;
   font-size: 25px;
+  color: #ed1c40;
+  // border: 1px solid rgba(0,0,0,.12);
+
 
 
 
 }
 
+
+.x{
+
+}
 
 .indexlinko{
   display: flex;
