--- a/app/assets/stylesheets/api/loggdouthome.scss
+++ b/app/assets/stylesheets/api/loggdouthome.scss
@@ -1,15 +1,18 @@
+
+
 .dummy{
   text-align: center;
   height: 100%;
   font-family: 'Ubuntu', sans-serif;
   width: 100%;
+
   // overflow-y: auto;
 }
 
 
 .backgroundgif{
   display: flex;
-  height: 300px;
+  height: 400px;
   min-width: 900px;
   width: 100%;
   background-image: image-url("testg.gif");
@@ -24,6 +27,15 @@
   min-width: 1000px;
 }
 
+.dummytitle{
+  display: flex;
+align-items: center;
+ justify-content: center;
+  margin: 20px;
+  font-size: 30px;
+  min-width: 600px;
+  min-height: 50px;
+}
 
 .dummyp{
   padding-top: 100px;
@@ -56,7 +68,7 @@
 .dummylist{
   display: flex;
   justify-content: center;
-  height: 100%;
+  // height: 100%;
   // max-height: 1700px;
   flex-wrap: wrap;
 
@@ -65,8 +77,12 @@
 }
 
 .dummyitem{
+  margin: 10px;
   display: flex;
   flex-direction: column;
-  width: 300px;
-  height: 300px;
+  min-width: 300px;
+  min-height: 300px;
+justify-content: flex-end;
+align-items: flex-start;
+font-size: 20px;
 }
